# Merlin

./: CMakeLists.txt  library.h
BoostTests/: CMakeLists.txt  main.cpp  main.h  test_LinearModel.cpp  test_lm.cpp
src/LinearModels/: LinearModel.cpp  LinearModel.h  lm.cpp  lm.h
